--- a/index.html
+++ b/index.html
@@ -16,13 +16,46 @@
   <div class="form">
     <form>
       <div class="input-wrap">
-        <label>XXX</label>
-        <input data-rule="max:10|min:2"
-               id="test"
+        <label>姓名</label>
+        <input data-rule="maxlength:5|minlength:1"
+               name="name"
                type="text"
                class="input-control">
-        <div class="input-error">姓名格式有误</div>
+        <div id="name-input-error" class="input-error">姓名格式有误</div>
       </div>
+      <div class="input-wrap">
+        <label>用户名</label>
+        <input data-rule='pattern:"^[a-z0-9]*$"|maxlength:18|minlength:4'
+               name="username"
+               type="text"
+               class="input-control">
+        <div id="username-input-error" class="input-error">用户名格式有误</div>
+      </div>
+      <div class="input-wrap">
+        <label>自我介绍</label>
+        <input data-rule="required:false|maxlength:1024"
+               name="intro"
+               type="text"
+               class="input-control">
+        <div id="intro-input-error" class="input-error">自我介绍格式有误</div>
+      </div>
+      <div class="input-wrap">
+        <label>年龄</label>
+        <input data-rule="min:18"
+               name="age"
+               type="text"
+               class="input-control">
+        <div id="age-input-error" class="input-error">年龄格式有误</div>
+      </div>
+      <div class="input-wrap">
+        <label>密码</label>
+        <input data-rule="minlength:6|maxlength:64"
+               name="password"
+               type="password"
+               class="input-control">
+        <div id="password-input-error" class="input-error">密码格式有误</div>
+      </div>
+      <button type="submit">注册</button>
     </form>
   </div>
 </div>
