--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>YO.</h1>
   </div>
   <div class="form">
-    <form>
+    <form id="signup">
       <div class="input-wrap">
         <label>姓名</label>
         <input data-rule="maxlength:5|minlength:1"
